# RAMMCo

./: CMakeLists.txt  README.md  install.sh
Cast3M/: demo.dgibi
octave/: assemble.m  calculate.m  initiate.m
src/: Camera.cpp  Camera.h  Core.cpp  Core.h  Projector.cpp  Projector.h  Simulation.cpp  Simulation.h  define.h  main.cpp  rammco.h
